--- a/app/views/home/_user_not_signed_in.html.erb
+++ b/app/views/home/_user_not_signed_in.html.erb
@@ -5,11 +5,11 @@
   <ul class="register">
     <%= render 'devise/menu/registration_items' %>
   </ul>
-  <div class="more">
+  <!-- <div class="more">
     <a data-toggle="modal" data-target="#myModal">
       Learn more about MYPROTOCOL
     </a>
-  </div>
+  </div> -->
   <!-- Button trigger modal -->
 
 
