--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -61,32 +61,32 @@
       <%= f.select :veggies_per_day, Profile::VEGGIE_OPTIONS, {} %>
   </div>
 
-  <div class="row">
-    <h4>Goals</h4>
+  <div class="form-area" style="height: 120px;">
+    <label>Goals</label>
+    <div class="checkarea">
     <% Goal.all.each do |g| %>
-      <div class="col-md-6">
+      <div class="col-md-6 col-sm-6 col-xs-6">
         <div class="checkbox">
-          <label>
             <%= check_box_tag 'profile[goal_ids][]', g.id, @profile.goals.include?(g) %>
             <%= g.title %>
-          </label>
         </div>
       </div>
     <% end %>
+    </div>
   </div>
 
-  <div class="row">
-    <h4>Dietary Restrictions</h4>
-    <% Restriction.all.each do |r| %>
-      <div class="col-md-6">
-        <div class="checkbox">
-          <label>
-            <%= check_box_tag 'profile[restriction_ids][]', r.id, @profile.restrictions.include?(r) %>
-            <%= r.title %>
-          </label>
+  <div class="form-area" style="height: 280px;">
+    <label>Dietary Restrictions</label>
+    <div class="checkarea">
+      <% Restriction.all.each do |r| %>
+        <div class="col-md-6 col-sm-6 col-xs-6">
+          <div class="checkbox">
+              <%= check_box_tag 'profile[restriction_ids][]', r.id, @profile.restrictions.include?(r) %>
+              <%= r.title %>
+          </div>
         </div>
-      </div>
-    <% end %>
+      <% end %>
+    </div>
   </div>
 
   <div class="actions form-area">
