--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -1,4 +1,4 @@
-
+<div class="container-fluid no-pad landing_two"></div>
 <div class="new-profile container">
 	<div class="row">
 		<h2>Editing profile</h2>
