--- a/app/views/coaches/_form.html.erb
+++ b/app/views/coaches/_form.html.erb
@@ -11,97 +11,84 @@
     </div>
   <% end %>
 
-  <div class="form-group">
-    <%= f.label :image, class: 'col-sm-2 control-label' %>
-    <div class="col-sm-10">
-      <%= f.file_field :image, class: 'form-control' %>
-    </div>
+  <div class="form-area">
+    <%= f.label :image %>
+      <%= f.file_field :image %>
   </div>
 
-  <div class="form-group">
-    <%= f.label :name, class: 'col-sm-2 control-label' %>
-    <div class="col-sm-10">
-      <%= f.text_field :name, class: 'form-control' %>
-    </div>
+
+  <div class="form-area">
+    <%= f.label :name %>
+      <%= f.text_field :name %>
   </div>
 
-  <div class="form-group">
-    <%= f.label :business, class: 'col-sm-2 control-label' %>
-    <div class="col-sm-10">
-      <%= f.text_field :business, class: 'form-control' %>
-    </div>
+
+  <div class="form-area">
+    <%= f.label :business %>
+      <%= f.text_field :business %>
   </div>
 
-  <div class="form-group">
-    <%= f.label :street, class: 'col-sm-2 control-label' %>
-    <div class="col-sm-10">
-      <%= f.text_field :street, class: 'form-control' %>
-    </div>
+
+  <div class="form-area">
+    <%= f.label :street %>
+      <%= f.text_field :street %>
   </div>
 
-  <div class="form-group">
-    <%= f.label :city, class: 'col-sm-2 control-label' %>
-    <div class="col-sm-10">
-      <%= f.text_field :city, class: 'form-control' %>
-    </div>
+
+  <div class="form-area">
+    <%= f.label :city %>
+      <%= f.text_field :city %>
   </div>
 
-  <div class="form-group">
-    <%= f.label :state, class: 'col-sm-2 control-label' %>
-    <div class="col-sm-10">
-      <%= f.select :state, Coach::STATES, {}, class: 'form-control' %>
-    </div>
+
+  <div class="form-area">
+    <%= f.label :state %>
+      <%= f.select :state, Coach::STATES, {} %>
   </div>
 
-  <div class="form-group">
-    <%= f.label :zip, class: 'col-sm-2 control-label' %>
-    <div class="col-sm-10">
-      <%= f.text_field :zip, class: 'form-control' %>
-    </div>
+
+  <div class="form-area">
+    <%= f.label :zip %>
+      <%= f.text_field :zip %>
   </div>
 
-  <div class="form-group">
-    <%= f.label :phone_number, class: 'col-sm-2 control-label' %>
-    <div class="col-sm-10">
-      <%= f.text_field :phone_number, class: 'form-control' %>
-    </div>
+
+  <div class="form-area">
+    <%= f.label :phone_number %>
+      <%= f.text_field :phone_number %>
   </div>
 
-  <div class="form-group">
-    <%= f.label :certifications, class: 'col-sm-2 control-label' %>
-    <div class="col-sm-10">
-      <%= f.text_area :certifications, class: 'form-control' %>
-    </div>
+
+  <div class="form-area" style="height: 110px;">
+    <%= f.label :certifications %>
+      <%= f.text_area :certifications %>
   </div>
 
-  <div class="form-group">
-    <%= f.label :bio, class: 'col-sm-2 control-label' %>
-    <div class="col-sm-10">
-      <%= f.text_area :bio, class: 'form-control' %>
-    </div>
+
+  <div class="form-area" style="height: 110px;">
+    <%= f.label :bio %>
+      <%= f.text_area :bio %>
   </div>
 
-  <div class="form-group">
-    <%= f.label :quote, class: 'col-sm-2 control-label' %>
-    <div class="col-sm-10">
-      <%= f.text_field :quote, class: 'form-control' %>
-    </div>
-  </div>
-  <div class="form-group">
-    <%= f.label :quoter, '- By', class: 'col-sm-offset-4 col-sm-2 control-label' %>
-    <div class="col-sm-6">
-      <%= f.text_field :quoter, class: 'form-control' %>
-    </div>
+
+  <div class="form-area">
+    <%= f.label :quote %>
+      <%= f.text_field :quote %>
   </div>
 
-  <div class="form-group">
-    <%= f.label :shirt_size, class: 'col-sm-2 control-label' %>
-    <div class="col-sm-10">
-      <%= f.select :shirt_size, Coach::SIZES, {}, class: 'form-control' %>
-    </div>
+  <div class="form-area">
+    <%= f.label :quoter %>
+      <%= f.text_field :quoter %>
   </div>
 
-  <div class="actions">
-    <%= f.submit class: 'btn btn-primary' %>
+
+  <div class="form-area">
+    <%= f.label :shirt_size %>
+      <%= f.select :shirt_size, Coach::SIZES, {} %>
+  </div>
+
+
+  <div class="actions form-area">
+    <%= f.submit %>
   </div>
 <% end %>
