--- a/app/views/coaches/edit.html.erb
+++ b/app/views/coaches/edit.html.erb
@@ -1,6 +1,10 @@
-<div class="row">
-  <div class="col-md-offset-2 col-md-8">
-    <h1>Editing Coach</h1>
-    <%= render 'form' %>
+<div class="container-fluid no-pad landing_two"></div>
+<div class="new-profile container">
+    <div class="row">
+		<h2>Editing Coach</h2>
+		<div class="col-md-8 col-md-offset-2 form">
+		    <%= render 'form' %>
+	    </div>
+    </div>
   </div>
 </div>
