--- a/app/views/coaches/new.html.erb
+++ b/app/views/coaches/new.html.erb
@@ -1,6 +1,10 @@
-<div class="row">
-  <div class="col-md-offset-2 col-md-8">
-    <h1>New Coach</h1>
-    <%= render 'form' %>
-  </div>
+<div class="container-fluid no-pad landing_two"></div>
+	<div class="new-profile container">
+	    <div class="row">
+		    <h2>New Coach</h2>
+		    <div class="col-md-8 col-md-offset-2 form">
+			    <%= render 'form' %>
+		    </div>
+	    </div>
+	</div>
 </div>
