--- a/app/views/gyms/_form.html.erb
+++ b/app/views/gyms/_form.html.erb
@@ -11,44 +11,32 @@
   </div>
   <% end %>
 
-  <div class="form-group">
-    <%= f.label :image, class: 'col-sm-2 control-label' %>
-    <div class="col-sm-10">
-      <%= f.file_field :image, class: 'form-control' %>
-    </div>
+  <div class="form-area">
+    <%= f.label :image %>
+      <%= f.file_field :image %>
   </div>
 
-  <div class="form-group">
-    <%= f.label :name, class: 'col-sm-2 control-label' %>
-    <div class="col-sm-10">
-      <%= f.text_field :name, class: 'form-control' %>
-    </div>
+  <div class="form-area">
+    <%= f.label :name %>
+      <%= f.text_field :name %>
   </div>
-  <div class="form-group">
-    <%= f.label :street, class: 'col-sm-2 control-label' %>
-    <div class="col-sm-10">
-      <%= f.text_field :street, class: 'form-control' %>
-    </div>
+  <div class="form-area">
+    <%= f.label :street %>
+      <%= f.text_field :street %>
   </div>
-  <div class="form-group">
-    <%= f.label :city, class: 'col-sm-2 control-label' %>
-    <div class="col-sm-10">
-      <%= f.text_field :city, class: 'form-control' %>
-    </div>
+  <div class="form-area">
+    <%= f.label :city %>
+      <%= f.text_field :city %>
   </div>
-  <div class="form-group">
-    <%= f.label :state, class: 'col-sm-2 control-label' %>
-    <div class="col-sm-10">
-      <%= f.select :state, Coach::STATES, {}, class: 'form-control' %>
-    </div>
+  <div class="form-area">
+    <%= f.label :state %>
+      <%= f.select :state, Coach::STATES, {} %>
   </div>
-  <div class="form-group">
-    <%= f.label :zip, class: 'col-sm-2 control-label' %>
-    <div class="col-sm-10">
-      <%= f.text_field :zip, class: 'form-control' %>
-    </div>
+  <div class="form-area">
+    <%= f.label :zip %>
+      <%= f.text_field :zip %>
   </div>
-  <div class="actions">
-    <%= f.submit class: 'btn btn-primary' %>
+  <div class="actions form-area">
+    <%= f.submit %>
   </div>
 <% end %>
