--- a/app/views/gyms/edit.html.erb
+++ b/app/views/gyms/edit.html.erb
@@ -1,6 +1,10 @@
-<div class="row">
-  <div class="col-md-offset-2 col-md-8">
-    <h1>Editing gym</h1>
-    <%= render 'form' %>
-  </div>
+<div class="container-fluid no-pad landing_two"></div>
+	<div class="new-profile container">
+	    <div class="row">
+    		<h2>Editing gym</h2>
+    		<div class="col-md-8 col-md-offset-2 form">
+			    <%= render 'form' %>
+		    </div>
+		</div>
+	</div>
 </div>
