--- a/app/views/registrations/edit.html.erb
+++ b/app/views/registrations/edit.html.erb
@@ -1,29 +1,33 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class="container-fluid no-pad landing_two"></div>
+<div class="new-profile container">
+    <div class="row">
+      <h2>Edit <%= resource_name.to_s.humanize %></h2>
+    </div>
+<div class="col-md-8 col-md-offset-2 form">
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+    <%= devise_error_messages! %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
+    <div class="form-area"><%= f.label :email %>
+    <%= f.email_field :email, autofocus: true %></div>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, autofocus: true %></div>
+    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+      <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+    <% end %>
 
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+    <div class="form-area"><%= f.label :password %>
+      <%= f.password_field :password, autocomplete: "off", :placeholder => "leave blank if you don't want to change it" %></div>
+
+    <div class="form-area"><%= f.label :password_confirmation %>
+      <%= f.password_field :password_confirmation, autocomplete: "off" %></div>
+
+    <div class="form-area"><%= f.label :current_password %> 
+      <%= f.password_field :current_password, autocomplete: "off", :placeholder => "we need your current password to confirm your changes" %></div>
+
+    <div class="form-area"><%= f.submit "Update" %></div>
   <% end %>
+<br /><br />
+  <h2>Cancel my account</h2>
+  <div class="form-area"> 
+    <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, :class => "new" %></p>
+  </div>
 
-  <div><%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "off" %></div>
-
-  <div><%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %></div>
-
-  <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "off" %></div>
-
-  <div><%= f.submit "Update" %></div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
