--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -38,12 +38,12 @@
 
   <div class="form-area">
     <%= f.label :height %>
-      <%= f.text_field :height %>
+      <%= f.text_field :height, :placeholder => "inches" %>
   </div>
 
   <div class="form-area">
     <%= f.label :weight %>
-      <%= f.text_field :weight %>
+      <%= f.text_field :weight, :placeholder => "lbs" %>
   </div>
 
   <div class="form-area">
