--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -98,7 +98,7 @@ body{
 			width: 800px;
 			height: 140px;
 			display: block;
-			background: url(/assets/logo.png) 50% 50% no-repeat;
+			background: image-url(/assets/logo.png) 50% 50% no-repeat;
 			background-size: 100%;
 			margin: 200px auto 0 auto;
 		}
