--- a/app/assets/stylesheets/navigation.scss
+++ b/app/assets/stylesheets/navigation.scss
@@ -28,7 +28,7 @@
 				width: 250px;
 				height: 50px;
 				display: block;
-				background: image-url(/assets/logo.png) 50% 50% no-repeat;
+				background: image-url('logo.png') 50% 50% no-repeat;
 				background-size: 100%;
 			}
 			a{
