--- a/app/views/home/_user_dashboard.html.erb
+++ b/app/views/home/_user_dashboard.html.erb
@@ -40,8 +40,8 @@
           <h2><span style="color: rgba(255,255,255,.75);">Your </span> Protocol Plan</h2>
           <div class="panel-body">
             <div class="col-md-6">
-              <div class="left"><div class="title">Estimated BMI:</div> <%= current_user.profile.bmi.round 2 %></div>
-              <div class="left"><div class="title">Estimated LBM:</div> <%= current_user.profile.lbm.round 2 %></div>
+              <div class="left"><div class="title">Estimated BMI:</div> <%= current_user.profile.bmi.round 2 %> GRAMS</div>
+              <div class="left"><div class="title">Estimated LBM:</div> <%= current_user.profile.lbm.round 2 %> GRAMS</div>
             </div>
 
             <div class="col-md-6">
