--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -1,3 +1,4 @@
+<div class="container-fluid no-pad landing_two"></div>
 <div class="welcome"></div>
 <div class="intro col-md-10 col-md-offset-1">By taking our quick and easy Protocol Plan of Action quiz, you provide us with important information about who you are and what your goals are in order for us to understand your overall health and wellness in a snapshot.  Additionally, this information enables us to identify products and make specific recommendations based on your answers to help support you through your journey of health!</div>	
 <div class="new-profile container">
