--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -181,6 +181,9 @@
 					padding-left: 15px;
 					border-top: none;
 					border-left: 1px solid rgba(255,255,255, .1);
+					img{
+						width: 100px;
+					}
 					&.buttons{
 						padding: 0;
 					a{
