--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -453,6 +453,24 @@ body{
 .field_with_errors {
 	display: inline;
 }
+footer{
+	padding: 50px 0 40px 0;
+	color: #e6e6e6;
+	font-size: 12px;
+	font-family: helvetica;
+	display: block;
+	.left{
+		font-weight: bold;
+		text-transform: uppercase;
+		margin-left: 20px;
+		float: left;
+	}
+	.right{
+		margin-right: 20px;
+		float: right;
+		font-size: 10px;
+	}
+}
 
 ::selection{
 	background: #cccccc;
