--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
   <div class="container">
     <%= yield %>
   </div>
-  <footer><div class="left"><a href="http://protocolnutrition.com/">2015 Protocol Nutrition</a></div><div class="right">* These statements have not been evaluated by the Food and Drug Administration. <br /> This product is not intended to diagnose, treat, cure, or prevent any disease</div></footer>
+  <footer><a href="http://protocolnutrition.com/">2015 Protocol Nutrition</a>
+  <br />  * These statements have not been evaluated by the Food and Drug Administration.This product is not intended to diagnose, treat, cure, or prevent any disease</footer>
 </body>
 </html>
