--- a/app/views/navigation/_navigation.html.erb
+++ b/app/views/navigation/_navigation.html.erb
@@ -18,6 +18,7 @@
      <% end %>
   </ul>
   <ul class="logout">
+  <li><%= link_to "START SHOPPING", "http://protocolnutrition.com/" %></li> 
     <%= render 'devise/menu/login_items' %>
   </ul>
 <% if user_signed_in? %>
