--- a/app/assets/stylesheets/navigation.scss
+++ b/app/assets/stylesheets/navigation.scss
@@ -8,7 +8,7 @@
 		z-index: 3;
 		float: left;
 		display: inline-block;
-		width: 85%;
+		width: 75%;
 		list-style: none;
 		padding: 0;
 		margin-top: 20px;
@@ -55,11 +55,11 @@
 	float: right;
 	li{
 		list-style: none;
-		display: block;
+		display: inline-block;
 		vertical-align: middle;
-		margin-top: 29%;
-		margin-bottom: 20%;
-		font-size: 16px;
+		margin-top: 11%;
+		margin-bottom: 10%;
+		font-size: 15px;
 		a{
 			color: #a90329;
 			opacity: .5;
