--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -454,21 +454,30 @@ body{
 	display: inline;
 }
 footer{
-	padding: 50px 0 40px 0;
+	margin-top: 50px;
+	padding: 20px 0 50px 0;
 	color: #e6e6e6;
 	font-size: 12px;
 	font-family: helvetica;
 	display: block;
-	.left{
+	text-align: center;
+	font-size: 9px;
+	border-top: 1px solid rgba(255,255,255,.25);
+	a{
 		font-weight: bold;
 		text-transform: uppercase;
-		margin-left: 20px;
-		float: left;
+		font-size: 12px;
+		display: block;
+		margin-bottom: -5px;
 	}
-	.right{
-		margin-right: 20px;
-		float: right;
-		font-size: 10px;
+}
+
+@media screen and (max-width: 1400px){
+	.navibar .hmenu li{
+		padding: 0 10px !important;
+	}
+	.logout li a{
+		padding: 0 10px !important;
 	}
 }
 
