--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -25,7 +25,7 @@
 	display: inline-block;
 	.form{
 		margin-top: 20px;
-		border-bottom: 1px solid #333333;
+		margin-bottom: 30px;
 		padding: 0 0 20px 0;
 		h2{
 			font-size: 30px;
