--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -1,6 +1,6 @@
+body, html{height: 100%;}
 body{
 	display: block;
-	height: 100%;
 	min-width: 1300px;
 	overflow-x: hidden;
 	background: #000000;
@@ -382,6 +382,7 @@ body{
 		}
 		.dragon_master{
 			margin-top: 30px;
+			margin-bottom: 30px;
 			.coach{
 				img{
 					width: 200px;
@@ -453,24 +454,7 @@ body{
 .field_with_errors {
 	display: inline;
 }
-footer{
-	margin-top: 50px;
-	padding: 20px 0 50px 0;
-	color: #e6e6e6;
-	font-size: 12px;
-	font-family: helvetica;
-	display: block;
-	text-align: center;
-	font-size: 9px;
-	border-top: 1px solid rgba(255,255,255,.25);
-	a{
-		font-weight: bold;
-		text-transform: uppercase;
-		font-size: 12px;
-		display: block;
-		margin-bottom: -5px;
-	}
-}
+
 
 @media screen and (max-width: 1400px){
 	.navibar .hmenu li{
