--- a/app/views/home/_user_dashboard.html.erb
+++ b/app/views/home/_user_dashboard.html.erb
@@ -47,9 +47,9 @@
             <div class="col-md-6">
               <h3>our Recommendations</h3>
               <ul class="recomendations">
-                <li><strong>Protein:</strong> <%= current_user.profile.protein %> Grams</li>
-                <li><strong>BCAA:</strong> <%= current_user.profile.bcaa %></li>
-                <li><strong>Creatine:</strong> <%= current_user.profile.creatine %></li>
+                <li><strong>Protein (Grams):</strong> <%= current_user.profile.protein %></li>
+                <li><strong>BCAA (Grams):</strong> <%= current_user.profile.bcaa %></li>
+                <li><strong>Creatine (Grams):</strong> <%= current_user.profile.creatine %></li>
                 <li><strong>Fish Oil:</strong> <%= current_user.profile.fish_oil %></li>
               </ul>
             </div>
